--- a/package.json
+++ b/package.json
@@ -11,11 +11,24 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "@reduxjs/toolkit": "^2.2.4",
+    "@stripe/stripe-react-native": "^0.37.3",
+    "axios": "^1.6.8",
+    "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "~50.0.17",
+    "expo-camera": "^15.0.5",
+    "expo-image-picker": "^15.0.4",
     "expo-status-bar": "~1.11.1",
+    "mime": "^4.0.3",
+    "patch-package": "^8.0.0",
     "react": "18.2.0",
     "react-native": "0.73.6",
-    "react-native-paper": "^5.12.3"
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-paper": "^5.12.3",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-svg": "^15.2.0",
+    "react-native-toast-message": "^2.2.0",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
