--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
-    "@reduxjs/toolkit": "^2.2.4",
+    "@reduxjs/toolkit": "^2.2.7",
     "@stripe/stripe-react-native": "^0.35.1",
-    "axios": "^1.6.8",
+    "axios": "^1.7.5",
     "deprecated-react-native-prop-types": "^5.0.0",
-    "expo": "~50.0.17",
+    "expo": "^50.0.20",
     "expo-camera": "^14.1.3",
     "expo-image-picker": "^14.7.1",
     "expo-status-bar": "~1.11.1",
-    "mime": "^4.0.3",
+    "mime": "^4.0.4",
     "patch-package": "^8.0.0",
     "react": "18.2.0",
     "react-native": "0.73.6",
