--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-dotenv": "^3.4.11",
     "react-native-paper": "^5.12.3",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^14.1.0",
